enable_testing()

configure_file(run-test.sh.in run-test.sh)

option(CODES_ENABLE_ZMQML_HYBRID_TESTS
       "Register ZMQML hybrid workflow tests that require a running zmqmlserver.py"
       OFF)
# ---------------------------------------------------------------------------
# Unit tests for the YAML config compiler core. The GoogleTest framework
# (GTest::gtest / gtest_main) is built by the thirdparty dispatcher when
# BUILD_TESTING is on -- see thirdparty/googletest/. The core (config_compiler.cxx)
# is ROSS-free by design, so it compiles straight into the test with ryml -- no
# codes/ROSS/MPI link -- and the tests assert on the returned compiled_config.
# Unit tests run serially (no MPI), distinct from the mpiexec-launched model
# tests below.
add_executable(codes-config-compiler-test
    codes-config-compiler-test.cxx
    ${CMAKE_SOURCE_DIR}/src/modelconfig/config_compiler.cxx
    ${CODES_RYML_IMPL_TU})
target_include_directories(codes-config-compiler-test SYSTEM PRIVATE ${CODES_RYML_INCLUDE_DIRS})
target_include_directories(codes-config-compiler-test PRIVATE ${CMAKE_SOURCE_DIR}/src/modelconfig)
target_link_libraries(codes-config-compiler-test PRIVATE GTest::gtest_main)
add_test(NAME codes-config-compiler-test COMMAND codes-config-compiler-test)
# ---------------------------------------------------------------------------
# MPI launch preflight. Fails loudly if mpiexec can't form a real multi-rank
# MPI_COMM_WORLD, guarding against a broken launcher (e.g. Ubuntu 24.04's mpich
# 4.2.0-5build3, whose Hydra starts every rank as a singleton) silently
# degrading the optimistic (--sync=3) model tests below into N independent
# *sequential* runs that still exit 0 and pass. Launched exactly like the other
# MPI tests (same MPIEXEC_* vars) at np=2; the binary returns nonzero unless
# MPI_Comm_size == 2, so a singleton launcher makes ctest fail here.
add_executable(mpi-multirank-check mpi-multirank-check.c)
target_link_libraries(mpi-multirank-check PRIVATE MPI::MPI_C)
add_test(NAME mpi-multirank-sanity
    COMMAND ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} 2 ${MPIEXEC_PREFLAGS}
            $<TARGET_FILE:mpi-multirank-check> 2 ${MPIEXEC_POSTFLAGS})
# ---------------------------------------------------------------------------

# codes_add_equivalence_test — register an equivalence/determinism test.
#
# Runs a model binary two or more times and asserts a marker line (default
# "Net Events Processed") is identical across runs. Replaces the copy-and-edit
# per-scenario shell scripts: adding a test is one call here, no new file.
#
#   codes_add_equivalence_test(
#       NAME     <ctest name>
#       BINARY   <CMake target>            # e.g. tutorial-synthetic-ping-pong
#       CONFIG   <path under build dir, or bare name generated by SETUP>
#       [NP      <ranks>]                   # default 3
#       [ARGS    <args shared by all runs>]
#       [REPEAT  <n>]                       # default 2; identical runs (reproducibility)
#       [VARIANTS "<extra args run 1>" "<extra args run 2>" ...]  # one run each, appended
#       [MARKER  <line to compare>]         # default "Net Events Processed"
#       [SETUP   <script under tests/>]      # sourced in each run dir (env + conf gen)
#       [REQUIRE <line that must appear in every run's output>]  # presence only
#   )
#
# With SETUP, CONFIG names the file the setup script generates in each run dir
# (referenced by bare name), not a build-dir path.
#
# REPEAT and VARIANTS are mutually exclusive ways to describe the runs:
# REPEAT for "same command N times", VARIANTS when only a small fragment differs
# (e.g. VARIANTS "--sync=1" "--sync=3" for a seq-vs-optimistic check).
function(codes_add_equivalence_test)
    cmake_parse_arguments(T "" "NAME;BINARY;NP;CONFIG;MARKER;REPEAT;SETUP;REQUIRE" "ARGS;VARIANTS" ${ARGN})

    if(NOT T_NAME OR NOT T_BINARY OR NOT T_CONFIG)
        message(FATAL_ERROR "codes_add_equivalence_test: NAME, BINARY and CONFIG are required")
    endif()
    if(NOT T_NP)
        set(T_NP 3)
    endif()
    if(NOT T_MARKER)
        set(T_MARKER "Net Events Processed")
    endif()
    if(NOT T_REPEAT)
        set(T_REPEAT 2)
    endif()

    set(_bin    "$<TARGET_FILE:${T_BINARY}>")
    # Without SETUP, CONFIG is a file under the build dir. With SETUP, the config
    # is generated by the setup script inside each run dir, so CONFIG is the bare
    # name it writes (resolved relative to the run dir).
    if(T_SETUP)
        set(_config "${T_CONFIG}")
    else()
        set(_config "${CODES_BINARY_DIR}/${T_CONFIG}")
    endif()
    set(_launch ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} ${T_NP} ${MPIEXEC_PREFLAGS})

    set(_cmd "")
    if(T_VARIANTS)
        foreach(_extra IN LISTS T_VARIANTS)
            separate_arguments(_extra_list UNIX_COMMAND "${_extra}")
            list(APPEND _cmd @@ ${_launch} "${_bin}" ${T_ARGS} ${_extra_list}
                             ${MPIEXEC_POSTFLAGS} -- "${_config}")
        endforeach()
    else()
        foreach(_i RANGE 1 ${T_REPEAT})
            list(APPEND _cmd @@ ${_launch} "${_bin}" ${T_ARGS}
                             ${MPIEXEC_POSTFLAGS} -- "${_config}")
        endforeach()
    endif()

    set(_setup "")
    if(T_SETUP)
        set(_setup --setup "${CMAKE_CURRENT_SOURCE_DIR}/${T_SETUP}")
    endif()
    set(_require "")
    if(T_REQUIRE)
        set(_require --require "${T_REQUIRE}")
    endif()

    add_test(NAME ${T_NAME}
        COMMAND "${CMAKE_CURRENT_BINARY_DIR}/run-test.sh"
                bash "${CMAKE_CURRENT_SOURCE_DIR}/equivalence-run.sh"
                --marker "${T_MARKER}" ${_require} ${_setup} ${_cmd}
        WORKING_DIRECTORY "${CODES_BINARY_DIR}")
endfunction()

# codes_add_run_test — register a single-run smoke / unit test.
#
# Runs a model or test binary once under MPI; the test passes on clean exit
# (run-test.sh additionally fails if the binary leaves an empty ross.csv). The
# caller supplies the full post-binary argument list, which absorbs the various
# ways CODES binaries take their config: positional, "-- <conf>",
# "--codes-config=<conf>", "--conf=<conf>", or none. Config files live in the
# source tree, so reference them as ${CMAKE_CURRENT_SOURCE_DIR}/... (tests/) or
# ${CMAKE_SOURCE_DIR}/... (elsewhere).
#
# With SETUP and/or MARKER the test runs through the staged runner instead:
# SETUP is sourced inside the run dir (env + config generation; reference the
# generated config by bare name in ARGS), and MARKER must appear in the output.
#
#   codes_add_run_test(
#       NAME   <ctest name>
#       BINARY <CMake target>
#       [NP    <ranks>]                 # default 1
#       [ARGS  <full args after the binary>]
#       [SETUP <script under tests/>]    # sourced in the run dir before the run
#       [MARKER <line that must appear in the output>]
#   )
function(codes_add_run_test)
    cmake_parse_arguments(T "" "NAME;BINARY;NP;SETUP;MARKER" "ARGS" ${ARGN})
    if(NOT T_NAME OR NOT T_BINARY)
        message(FATAL_ERROR "codes_add_run_test: NAME and BINARY are required")
    endif()
    if(NOT T_NP)
        set(T_NP 1)
    endif()
    set(_run ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} ${T_NP} ${MPIEXEC_PREFLAGS}
             "$<TARGET_FILE:${T_BINARY}>" ${T_ARGS} ${MPIEXEC_POSTFLAGS})

    if(T_SETUP OR T_MARKER)
        # SETUP must be sourced and MARKER checked -> go through the staged runner.
        set(_opts "")
        if(T_MARKER)
            list(APPEND _opts --marker "${T_MARKER}")
        endif()
        if(T_SETUP)
            list(APPEND _opts --setup "${CMAKE_CURRENT_SOURCE_DIR}/${T_SETUP}")
        endif()
        add_test(NAME ${T_NAME}
            COMMAND "${CMAKE_CURRENT_BINARY_DIR}/run-test.sh"
                    bash "${CMAKE_CURRENT_SOURCE_DIR}/equivalence-run.sh"
                    ${_opts} @@ ${_run}
            WORKING_DIRECTORY "${CODES_BINARY_DIR}")
    else()
        add_test(NAME ${T_NAME}
            COMMAND "${CMAKE_CURRENT_BINARY_DIR}/run-test.sh" ${_run}
            WORKING_DIRECTORY "${CODES_BINARY_DIR}")
    endif()
endfunction()

# codes_add_lpio_equivalence_test — assert two configs produce equivalent results.
#
# Runs BINARY once per config (each with its own --lp-io-dir) and diffs the
# resulting per-LP lp-io output -- the set of identifier files, and a sorted diff
# of each. Two configs are equivalent iff every run produces identical lp-io. The
# primary use is checking a new YAML config against the legacy .conf it replaces;
# CONFIG_A/CONFIG_B can be any two config files the model accepts (format-agnostic,
# so it works with .conf-vs-.conf today and .conf-vs-.yaml once the YAML adapter
# lands). BINARY must be a model that emits lp-io (e.g. model-net-synthetic).
#
#   codes_add_lpio_equivalence_test(
#       NAME     <ctest name>
#       BINARY   <CMake target>
#       CONFIG_A <path>                  # e.g. legacy .conf
#       CONFIG_B <path>                  # e.g. new .yaml (or a second .conf)
#       [NP      <ranks>]                # default 1
#       [ARGS    <args shared by both runs, placed before the config>]
#       [CONFIG_FLAG <prefix>])          # e.g. "--conf=" for binaries that take
#                                        #   the config as a ROSS option instead
#                                        #   of the trailing `-- <config>` positional
function(codes_add_lpio_equivalence_test)
    cmake_parse_arguments(T "" "NAME;BINARY;NP;CONFIG_A;CONFIG_B;CONFIG_FLAG" "ARGS" ${ARGN})
    if(NOT T_NAME OR NOT T_BINARY OR NOT T_CONFIG_A OR NOT T_CONFIG_B)
        message(FATAL_ERROR "codes_add_lpio_equivalence_test: NAME, BINARY, CONFIG_A and CONFIG_B are required")
    endif()
    if(NOT T_NP)
        set(T_NP 1)
    endif()
    set(_bin    "$<TARGET_FILE:${T_BINARY}>")
    set(_launch ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} ${T_NP} ${MPIEXEC_PREFLAGS})
    # Each run writes lp-io into a fresh "lp-io" dir inside its own run-N subdir
    # (lp_io_prepare mkdir's it and aborts if it already exists, so it must be
    # relative + per-run-isolated, which the runner's subdirs provide).
    if(T_CONFIG_FLAG)
        # config is a ROSS option (e.g. --conf=<path>): glue it to the prefix and
        # pass it among the ROSS args, with no trailing `-- <config>` positional.
        set(_run_a ${_launch} "${_bin}" ${T_ARGS} --lp-io-dir=lp-io "${T_CONFIG_FLAG}${T_CONFIG_A}" ${MPIEXEC_POSTFLAGS})
        set(_run_b ${_launch} "${_bin}" ${T_ARGS} --lp-io-dir=lp-io "${T_CONFIG_FLAG}${T_CONFIG_B}" ${MPIEXEC_POSTFLAGS})
    else()
        set(_run_a ${_launch} "${_bin}" ${T_ARGS} --lp-io-dir=lp-io ${MPIEXEC_POSTFLAGS} -- "${T_CONFIG_A}")
        set(_run_b ${_launch} "${_bin}" ${T_ARGS} --lp-io-dir=lp-io ${MPIEXEC_POSTFLAGS} -- "${T_CONFIG_B}")
    endif()
    add_test(NAME ${T_NAME}
        COMMAND "${CMAKE_CURRENT_BINARY_DIR}/run-test.sh"
                bash "${CMAKE_CURRENT_SOURCE_DIR}/equivalence-run.sh"
                --marker "Net Events Processed" --lp-io lp-io
                @@ ${_run_a}
                @@ ${_run_b}
        WORKING_DIRECTORY "${CODES_BINARY_DIR}")
endfunction()

# codes_add_config_equivalence_test — assert two configs drive a model to the
# same committed work, comparing a marker line rather than lp-io. The fallback
# for the cases where a per-LP lp-io diff can't be used: the binary emits no
# lp-io at all (e.g. resource-test / buffer_test), or its lp-io is not
# reproducible run to run (e.g. fattree's switch stats). The old .conf vs new
# .yaml check for those. Everything whose lp-io *is* per-run reproducible should
# use codes_add_lpio_equivalence_test instead -- a strictly stronger check.
#
#   codes_add_config_equivalence_test(
#       NAME <name> BINARY <target> [NP <n>]
#       CONFIG_A <path>                  # e.g. legacy .conf
#       CONFIG_B <path>                  # e.g. new .yaml
#       [MARKER <line>] [ARGS <args>...]
#       [CONFIG_FLAG <prefix>]           # e.g. "--conf=" for binaries that take
#                                        #   the config as a ROSS option instead
#                                        #   of the trailing `-- <config>` positional
#       [SETUP   <script under tests/>]   # sourced in each run dir (env + conf gen)
#       [REQUIRE <line that must appear in every run's output>])  # presence only
#
# With SETUP (mirroring codes_add_equivalence_test), CONFIG_A/CONFIG_B name the
# files the setup script generates in each run dir (referenced by bare name), not
# pre-existing paths -- so one setup script generating both the .conf and its .yaml
# twin lets this compare a config format whose file is produced per run (e.g. the
# surrogate config, assembled from a template by envsubst at run time). REQUIRE
# asserts a line is present in every run (e.g. that the surrogate actually switched).
function(codes_add_config_equivalence_test)
    cmake_parse_arguments(T "" "NAME;BINARY;NP;CONFIG_A;CONFIG_B;MARKER;CONFIG_FLAG;SETUP;REQUIRE" "ARGS" ${ARGN})
    if(NOT T_NAME OR NOT T_BINARY OR NOT T_CONFIG_A OR NOT T_CONFIG_B)
        message(FATAL_ERROR "codes_add_config_equivalence_test: NAME, BINARY, CONFIG_A and CONFIG_B are required")
    endif()
    if(NOT T_NP)
        set(T_NP 1)
    endif()
    if(NOT T_MARKER)
        set(T_MARKER "Net Events Processed")
    endif()
    set(_bin    "$<TARGET_FILE:${T_BINARY}>")
    set(_launch ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} ${T_NP} ${MPIEXEC_PREFLAGS})
    if(T_CONFIG_FLAG)
        # config is a ROSS option (e.g. --conf=<path>): glue it to the prefix and
        # pass it among the ROSS args, with no trailing `-- <config>` positional.
        set(_run_a ${_launch} "${_bin}" ${T_ARGS} "${T_CONFIG_FLAG}${T_CONFIG_A}" ${MPIEXEC_POSTFLAGS})
        set(_run_b ${_launch} "${_bin}" ${T_ARGS} "${T_CONFIG_FLAG}${T_CONFIG_B}" ${MPIEXEC_POSTFLAGS})
    else()
        set(_run_a ${_launch} "${_bin}" ${T_ARGS} ${MPIEXEC_POSTFLAGS} -- "${T_CONFIG_A}")
        set(_run_b ${_launch} "${_bin}" ${T_ARGS} ${MPIEXEC_POSTFLAGS} -- "${T_CONFIG_B}")
    endif()
    # SETUP is sourced inside each run dir before that run (env + config gen);
    # REQUIRE asserts a line's presence in every run. Both are handed to the same
    # equivalence-run.sh options codes_add_equivalence_test uses.
    set(_setup "")
    if(T_SETUP)
        set(_setup --setup "${CMAKE_CURRENT_SOURCE_DIR}/${T_SETUP}")
    endif()
    set(_require "")
    if(T_REQUIRE)
        set(_require --require "${T_REQUIRE}")
    endif()
    add_test(NAME ${T_NAME}
        COMMAND "${CMAKE_CURRENT_BINARY_DIR}/run-test.sh"
                bash "${CMAKE_CURRENT_SOURCE_DIR}/equivalence-run.sh"
                --marker "${T_MARKER}" ${_require} ${_setup}
                @@ ${_run_a}
                @@ ${_run_b}
        WORKING_DIRECTORY "${CODES_BINARY_DIR}")
endfunction()

# Unfortunatelly, CMake doesn't support iteration of a key-pair structure,
# otherwise the following lists could be easily compressed into a single
# list/dictionary/structure. Instead each C file name **MUST** match each
# binary file name. This would be handled differently if maintaining the
# autoconfig build was not a **MUST** (in which case, the name of the file and
# its binary should match, leaving us with a single list!)
set(test-c-files
    lp-io-test.c
    mapping_test.c
    jobmap-test.c
    map-ctx-test.c
    modelnet-prio-sched-test.c
    modelnet-test-dragonfly.c
    modelnet-test.c
    resource-test.c
    rc-stack-test.c
    modelnet-p2p-bw.c
    modelnet-simplep2p-test.c
    local-storage-model-test.c
    )

set(test-bin-names
    lp-io-test
    mapping_test
    jobmap-test
    map-ctx-test
    modelnet-prio-sched-test
    modelnet-test-dragonfly
    modelnet-test
    resource-test
    rc-stack-test
    modelnet-p2p-bw
    modelnet-simplep2p-test
    lsm-test
    )

foreach(testname cfile IN ZIP_LISTS test-bin-names test-c-files)
    add_executable(${testname} ${cfile})
    target_link_libraries(${testname} PUBLIC codes)
endforeach()

# Additional binary which is not self contained
add_executable(codes-workload-test
    workload/codes-workload-test.c
    workload/codes-workload-test-svr-lp.c
    workload/codes-workload-test-cn-lp.c
    )
target_link_libraries(codes-workload-test PUBLIC codes)

# Tests are also not consistent with the files to compile, but
# that's ok, there are more tests than binary files
# Scripts still run as per-scenario shell files. Most single-run tests were
# migrated to codes_add_run_test() and the simple determinism test to
# codes_add_equivalence_test() (both below). What remains here either has
# custom logic, is held back for review, or is migrated in a later chunk.
set(test-shell-files
    # mapping_test diffs binary output against tests/expected/mapping_test.out
    mapping_test.sh
    # surrogate-1/2/3 are cross-config comparison tests (surrogate vs high-fidelity,
    # freeze vs non-freeze) with custom sed-normalized diffs of per-LP *stdout* --
    # not determinism tests -- so they stay as scripts (same bucket as mapping_test).
    # TODO: convert these to codes_add_lpio_equivalence_test (the canonical per-LP
    # comparison; stdout scraping is the approach it replaces) once the surrogate
    # path emits lp-io output.
    example-ping-pong-surrogate-1.sh
    example-ping-pong-surrogate-2.sh
    example-ping-pong-surrogate-3.sh
    # ROSS instrumentation model-stats smoke tests: custom assertions on the
    # binary stats output (file presence + reference-parser round trip), so
    # they stay as scripts.
    example-ping-pong-model-stats.sh
    example-ping-pong-model-stats-modes.sh
    )

configure_file(conf/union-milc-jacobi-workload/dfdally-72-par.conf.in conf/union-milc-jacobi-workload/dfdally-72-par.conf.in @ONLY)

if(USE_UNION)
    set(union-shell-files
        union-workload-test-surrogate.sh
        union-workload-test-surrogate-smaller-chunk-size.sh
        union-workload-test-surrogate-parallel.sh
        union-workload-test-surrogate-parallel-deterministic-1.sh
        union-workload-test-surrogate-parallel-deterministic-2.sh
        union-workload-test-surrogate-parallel-deterministic-3.sh
        union-workload-test-surrogate-parallel-deterministic-4.sh
    )
    list(APPEND test-shell-files ${union-shell-files})
endif()

if(USE_ZEROMQ AND CODES_ENABLE_ZMQML_HYBRID_TESTS)
    list(APPEND test-shell-files
        zmqml-iteration-time-hybrid-workflow.sh
        zmqml-event-time-hybrid-workflow.sh
    )
endif()

foreach(testname ${test-shell-files})
    add_test(NAME ${testname}
        COMMAND "${CMAKE_CURRENT_BINARY_DIR}/run-test.sh" "${CMAKE_CURRENT_SOURCE_DIR}/${testname}"
        WORKING_DIRECTORY "${CODES_BINARY_DIR}")
endforeach()

# The union-surrogate tests run a heavy MILC+Jacobi UNION workload -- ~30 min for
# the set. Label them "nightly" so PR/push CI skips them (ctest --label-exclude
# nightly) and they run only on the scheduled nightly full-lane build, and give
# each a generous timeout so a hang can't wedge that job.
if(USE_UNION)
    set_tests_properties(${union-shell-files} PROPERTIES LABELS "nightly" TIMEOUT 1200)
endif()

# Equivalence / determinism tests (replacing per-scenario shell scripts).
# example-ping-pong-determinism.sh: run the optimistic sim twice, compare
# committed-event counts (reproducibility).
codes_add_equivalence_test(
    NAME   example-ping-pong-determinism
    BINARY tutorial-synthetic-ping-pong
    NP     3
    ARGS   --sync=3 --num_messages=10 --payload_sz=8192
    CONFIG doc/example/tutorial-ping-pong.conf)

# Surrogate-mode determinism: same surrogate config run twice (np 3, sync=3),
# committed-event counts must match. The two variants differ only in network
# treatment. REQUIRE asserts the surrogate actually switched.
codes_add_equivalence_test(
    NAME    example-ping-pong-surrogate-determinism-no-freeze
    BINARY  tutorial-synthetic-ping-pong
    NP      3
    ARGS    --sync=3 --num_messages=100 --payload_sz=8192
    CONFIG  tutorial-ping-pong-surrogate.conf
    SETUP   surrogate-determinism-no-freeze-setup.sh
    REQUIRE "Network switch completed")
codes_add_equivalence_test(
    NAME    example-ping-pong-surrogate-determinism-freeze
    BINARY  tutorial-synthetic-ping-pong
    NP      3
    ARGS    --sync=3 --num_messages=100 --payload_sz=8192
    CONFIG  tutorial-ping-pong-surrogate.conf
    SETUP   surrogate-determinism-freeze-setup.sh
    REQUIRE "Network switch completed")

# Config-equivalence for the tutorial ping-pong: the legacy .conf against its YAML
# twin. tutorial-synthetic-ping-pong writes its per-LP results to stdout and emits
# no lp-io, so this compares the "Net Events Processed" marker (codes_add_config_
# equivalence_test) rather than diffing lp-io. Args mirror example-ping-pong-
# determinism; both configs are the build-dir files configure_file wrote from the
# .conf.in / .yaml.in templates.
codes_add_config_equivalence_test(
    NAME     example-ping-pong-config-equivalence
    BINARY   tutorial-synthetic-ping-pong
    NP       3
    ARGS     --sync=3 --num_messages=10 --payload_sz=8192
    CONFIG_A "${CMAKE_BINARY_DIR}/doc/example/tutorial-ping-pong.conf"
    CONFIG_B "${CMAKE_BINARY_DIR}/doc/example/tutorial-ping-pong.yaml")

# Same, for the surrogate config. Its config is assembled per run from a template
# by envsubst (the trace/switch env varies), so codes_add_config_equivalence_test's
# SETUP generates both the .conf and .yaml twin in each run dir and CONFIG_A/B name
# them by their bare generated names. REQUIRE asserts the surrogate actually
# switched, so the two formats are compared on a run that exercised the director.
codes_add_config_equivalence_test(
    NAME     example-ping-pong-surrogate-config-equivalence
    BINARY   tutorial-synthetic-ping-pong
    NP       3
    ARGS     --sync=3 --num_messages=100 --payload_sz=8192
    CONFIG_A tutorial-ping-pong-surrogate.conf
    CONFIG_B tutorial-ping-pong-surrogate.yaml
    SETUP    surrogate-config-equivalence-setup.sh
    REQUIRE  "Network switch completed")

# Smoke test: the sim runs cleanly with an empty packet-latency trace path.
# Single run (SETUP generates the config; MARKER asserts it produced output).
codes_add_run_test(
    NAME   example-ping-pong-no-logging
    BINARY tutorial-synthetic-ping-pong
    NP     1
    ARGS   --sync=1 --num_messages=10 --payload_sz=4096 -- tutorial-ping-pong.conf
    SETUP  no-logging-setup.sh
    MARKER "Net Events Processed")

# Single-run smoke / unit tests (migrated from per-scenario shell scripts).
# Config files live in the source tree; _tconf/_nwconf point at the two homes.
set(_tconf "${CMAKE_CURRENT_SOURCE_DIR}/conf")
set(_nwconf "${CMAKE_SOURCE_DIR}/src/network-workloads/conf")

codes_add_run_test(NAME lp-io-test    BINARY lp-io-test    ARGS --sync=1)
# rc-stack-test is a serial unit test (no config, no args); the old script ran
# the wrong binary (modelnet-simplep2p-test) -- a copy-paste error, fixed here.
codes_add_run_test(NAME rc-stack-test BINARY rc-stack-test)
# modelnet-prio-sched ran both schedulers in one script; split into two tests.
codes_add_run_test(NAME modelnet-prio-sched-test-seq BINARY modelnet-prio-sched-test
    NP 1 ARGS --sync=1 -- "${_tconf}/modelnet-prio-sched-test.conf")
codes_add_run_test(NAME modelnet-prio-sched-test-opt BINARY modelnet-prio-sched-test
    NP 2 ARGS --sync=3 -- "${_tconf}/modelnet-prio-sched-test.conf")
codes_add_run_test(NAME jobmap-test   BINARY jobmap-test   ARGS "${_tconf}/jobmap-test-list.conf")
codes_add_run_test(NAME map-ctx-test  BINARY map-ctx-test  ARGS "${_tconf}/map-ctx-test.conf")
codes_add_run_test(NAME resource-test BINARY resource-test ARGS --sync=1 "--codes-config=${_tconf}/buffer_test.conf")
codes_add_run_test(NAME lsm-test      BINARY lsm-test      ARGS --sync=1 "--conf=${_tconf}/lsm-test.conf")
codes_add_run_test(NAME modelnet-simplep2p-test BINARY modelnet-simplep2p-test
    ARGS --sync=1 -- "${_tconf}/modelnet-test-simplep2p.conf")
codes_add_run_test(NAME modelnet-p2p-bw-loggp BINARY modelnet-p2p-bw
    ARGS --sync=1 -- "${_tconf}/modelnet-p2p-bw-loggp.conf")
codes_add_run_test(NAME codes-workload-test BINARY codes-workload-test
    ARGS --sync=1 "${CMAKE_CURRENT_SOURCE_DIR}/workload/codes-workload-test.conf")

# modelnet-test binary exercised against one config per topology.
codes_add_run_test(NAME modelnet-test           BINARY modelnet-test ARGS --sync=1 -- "${_tconf}/modelnet-test-simplenet.conf")
codes_add_run_test(NAME modelnet-test-dragonfly BINARY modelnet-test ARGS --sync=1 -- "${_tconf}/modelnet-test-dragonfly.conf")
codes_add_run_test(NAME modelnet-test-torus     BINARY modelnet-test ARGS --sync=1 -- "${_tconf}/modelnet-test-torus.conf")
codes_add_run_test(NAME modelnet-test-em        BINARY modelnet-test ARGS --sync=1 -- "${_tconf}/modelnet-test-em.conf")
codes_add_run_test(NAME modelnet-test-loggp     BINARY modelnet-test ARGS --sync=1 -- "${_tconf}/modelnet-test-loggp.conf")
codes_add_run_test(NAME modelnet-test-slimfly   BINARY modelnet-test ARGS --sync=1 -- "${_tconf}/modelnet-test-slimfly.conf")

# Synthetic-traffic binaries.
codes_add_run_test(NAME modelnet-test-dragonfly-synthetic BINARY model-net-synthetic
    ARGS --sync=1 --num_messages=1 -- "${_nwconf}/modelnet-synthetic-dragonfly.conf")
codes_add_run_test(NAME modelnet-test-fattree-synthetic BINARY model-net-synthetic-fattree
    ARGS --sync=1 -- "${_nwconf}/modelnet-synthetic-fattree.conf")
codes_add_run_test(NAME modelnet-test-slimfly-synthetic BINARY model-net-synthetic-slimfly
    ARGS --sync=1 -- "${_nwconf}/modelnet-synthetic-slimfly-min.conf")

# Config-equivalence harness: run two configs, diff per-LP lp-io output.
# The legacy .conf vs its YAML twin -- proves the YAML front-end compiles to a
# config the dragonfly model runs byte-identically to the .conf. ryml is always
# built, so this is unconditional.
codes_add_lpio_equivalence_test(
    NAME     synthetic-dragonfly-lpio-equivalence
    BINARY   model-net-synthetic
    NP       1
    ARGS     --sync=1 --num_messages=1
    CONFIG_A "${_nwconf}/modelnet-synthetic-dragonfly.conf"
    CONFIG_B "${_nwconf}/modelnet-synthetic-dragonfly.yaml")

# Flat networks (component + node count). The modelnet test binaries now honor
# --lp-io-dir, so each run writes lp-io to its own per-run dir: diff the per-LP
# lp-io output of the .conf against its YAML twin directly.
codes_add_lpio_equivalence_test(
    NAME     simplep2p-config-equivalence
    BINARY   modelnet-simplep2p-test
    ARGS     --sync=1
    CONFIG_A "${_tconf}/modelnet-test-simplep2p.conf"
    CONFIG_B "${_tconf}/modelnet-test-simplep2p.yaml")
codes_add_lpio_equivalence_test(
    NAME     simplenet-config-equivalence
    BINARY   modelnet-test
    ARGS     --sync=1
    CONFIG_A "${_tconf}/modelnet-test-simplenet.conf"
    CONFIG_B "${_tconf}/modelnet-test-simplenet.yaml")
codes_add_lpio_equivalence_test(
    NAME     loggp-config-equivalence
    BINARY   modelnet-test
    ARGS     --sync=1
    CONFIG_A "${_tconf}/modelnet-test-loggp.conf"
    CONFIG_B "${_tconf}/modelnet-test-loggp.yaml")

# Internally-generated fabrics (torus / express-mesh / slimfly), each run through
# the modelnet-test binary (per-run lp-io via --lp-io-dir), so diff the per-LP
# lp-io output between the .conf and its parametric-fabric YAML twin.
codes_add_lpio_equivalence_test(
    NAME     torus-config-equivalence
    BINARY   modelnet-test
    ARGS     --sync=1
    CONFIG_A "${_tconf}/modelnet-test-torus.conf"
    CONFIG_B "${_tconf}/modelnet-test-torus.yaml")
codes_add_lpio_equivalence_test(
    NAME     express-mesh-config-equivalence
    BINARY   modelnet-test
    ARGS     --sync=1
    CONFIG_A "${_tconf}/modelnet-test-em.conf"
    CONFIG_B "${_tconf}/modelnet-test-em.yaml")
codes_add_lpio_equivalence_test(
    NAME     slimfly-config-equivalence
    BINARY   modelnet-test
    ARGS     --sync=1
    CONFIG_A "${_tconf}/modelnet-test-slimfly.conf"
    CONFIG_B "${_tconf}/modelnet-test-slimfly.yaml")

# Explicit-groups form (non-network layouts): a custom group with a workload LP
# co-located with a storage/resource LP, plus that model's own pass-through
# section. lsm-test now honors --lp-io-dir (config still via the --conf= ROSS
# option, not a positional), so diff its per-LP lp-io output directly.
codes_add_lpio_equivalence_test(
    NAME        lsm-config-equivalence
    BINARY      lsm-test
    CONFIG_FLAG "--conf="
    ARGS        --sync=1
    CONFIG_A    "${_tconf}/lsm-test.conf"
    CONFIG_B    "${_tconf}/lsm-test.yaml")
# Same run, but the lsm section is factored into a shared fragment pulled in with
# `include:` -- exercises the loader-boundary include resolution end to end.
codes_add_lpio_equivalence_test(
    NAME        lsm-include-equivalence
    BINARY      lsm-test
    CONFIG_FLAG "--conf="
    ARGS        --sync=1
    CONFIG_A    "${_tconf}/lsm-test.conf"
    CONFIG_B    "${_tconf}/lsm-test-include.yaml")
# resource-test (buffer_test) writes no lp-io at all, so there is nothing to diff:
# fall back to comparing the marker line. Config is passed as a ROSS option.
codes_add_config_equivalence_test(
    NAME        resource-config-equivalence
    BINARY      resource-test
    CONFIG_FLAG "--codes-config="
    ARGS        --sync=1
    CONFIG_A    "${_tconf}/buffer_test.conf"
    CONFIG_B    "${_tconf}/buffer_test.yaml")

# The fat-tree *network* lp-io (switch / msg stats, model-net categories) is in
# fact reproducible run to run -- but the model-net-synthetic-fattree binary also
# dumps a PARAMS_LOG "sim_log.txt" into the same lp-io dir carrying wall-clock-
# derived ROSS runtime columns (running_time, event_rate, ...) that differ every
# run. A per-LP lp-io diff compares every file in the dir, so it would spuriously
# fail on sim_log.txt; the binary also hardcodes its lp-io path (no --lp-io-dir).
# So this one falls back to comparing the marker line.
codes_add_config_equivalence_test(
    NAME     fattree-config-equivalence
    BINARY   model-net-synthetic-fattree
    ARGS     --sync=1
    CONFIG_A "${_nwconf}/modelnet-synthetic-fattree.conf"
    CONFIG_B "${_nwconf}/modelnet-synthetic-fattree.yaml")

# dragonfly-dally is file-enumerated: it reads its binary connection files by a
# working-directory-relative path. The equivalence runner executes each run in
# its own subdir, so configure both configs with an absolute path to the
# (shared, in-tree) connection files.
configure_file(conf/dragonfly-dally/dfdally-72.conf.in conf/dragonfly-dally/dfdally-72.conf @ONLY)
configure_file(conf/dragonfly-dally/dfdally-72.yaml.in conf/dragonfly-dally/dfdally-72.yaml @ONLY)
codes_add_lpio_equivalence_test(
    NAME     dragonfly-dally-lpio-equivalence
    BINARY   model-net-synthetic-dragonfly-all
    NP       1
    ARGS     --sync=1 --num_messages=1
    CONFIG_A "${CMAKE_CURRENT_BINARY_DIR}/conf/dragonfly-dally/dfdally-72.conf"
    CONFIG_B "${CMAKE_CURRENT_BINARY_DIR}/conf/dragonfly-dally/dfdally-72.yaml")

# dragonfly-plus is likewise file-enumerated; same absolute-path treatment for
# its binary connection files.
configure_file(conf/dragonfly-plus/dfp-test.conf.in conf/dragonfly-plus/dfp-test.conf @ONLY)
configure_file(conf/dragonfly-plus/dfp-test.yaml.in conf/dragonfly-plus/dfp-test.yaml @ONLY)
codes_add_lpio_equivalence_test(
    NAME     dragonfly-plus-lpio-equivalence
    BINARY   model-net-synthetic-dragonfly-all
    NP       1
    ARGS     --sync=1 --num_messages=1
    CONFIG_A "${CMAKE_CURRENT_BINARY_DIR}/conf/dragonfly-plus/dfp-test.conf"
    CONFIG_B "${CMAKE_CURRENT_BINARY_DIR}/conf/dragonfly-plus/dfp-test.yaml")

# dragonfly-custom is file-enumerated too; its connection files live under
# scripts/dragonfly-custom/example (referenced by absolute path).
configure_file(conf/dragonfly-custom/dfcustom-8group.conf.in conf/dragonfly-custom/dfcustom-8group.conf @ONLY)
configure_file(conf/dragonfly-custom/dfcustom-8group.yaml.in conf/dragonfly-custom/dfcustom-8group.yaml @ONLY)
codes_add_lpio_equivalence_test(
    NAME     dragonfly-custom-lpio-equivalence
    BINARY   model-net-synthetic-dragonfly-all
    NP       1
    ARGS     --sync=1 --num_messages=1
    CONFIG_A "${CMAKE_CURRENT_BINARY_DIR}/conf/dragonfly-custom/dfcustom-8group.conf"
    CONFIG_B "${CMAKE_CURRENT_BINARY_DIR}/conf/dragonfly-custom/dfcustom-8group.yaml")
