set(example-files
    example
    tutorial-synthetic-ping-pong
    )

foreach(namefile ${example-files})
    add_executable(${namefile} ${namefile}.c)
    target_link_libraries(${namefile} PUBLIC codes)
endforeach()

# Saving default config files to run experiments with
configure_file(tutorial-ping-pong.conf.in tutorial-ping-pong.template.conf.in @ONLY)
configure_file(tutorial-ping-pong-surrogate.conf.in tutorial-ping-pong-surrogate.template.conf.in @ONLY)
configure_file(kb.dfdally-72-zeromq-director.conf.in kb.dfdally-72-zeromq-director.template.conf.in @ONLY)
configure_file(kb.dfdally-72-event-time-director.conf.in kb.dfdally-72-event-time-director.template.conf.in @ONLY)
configure_file(kb.dfdally-72-milc-small.workload.conf.in kb.dfdally-72-milc-small.workload.template.conf.in @ONLY)
configure_file(kb.dfdally-72-zeromq-director.conf.in kb.dfdally-72-zeromq-director.template.conf.in @ONLY)

set(single_quote "'")
set(double_quote "\"")

set(PACKET_SIZE "4096")
set(CHUNK_SIZE "64")
set(NETWORK_TREATMENT "freeze")
set(PACKET_LATENCY_TRACE_PATH "packet-latency-trace/")
set(IGNORE_UNTIL "200e4")
set(PREDICTOR_TYPE "average")
string(REPLACE ${single_quote} ${double_quote} SWITCH_TIMESTAMPS "'1000e4', '8900e4'")
set(DIRECTOR_START_ITER "3")
set(DIRECTOR_END_ITER "8")
set(DIRECTOR_RETRAIN_ENABLED "0")
set(DIRECTOR_RETRAIN_ITER "-1")
set(DIRECTOR_RETRAIN_SAVE_PATH "")
set(DIRECTOR_SECOND_SURROGATE_ENABLED "0")
set(DIRECTOR_SECOND_START_ITER "100000")
set(DIRECTOR_SECOND_END_ITER "100001")
set(INFERENCING_ENABLED "0")
set(SURROGATE_ENABLED "1")
set(TRAINING_ENABLED "1")
configure_file(tutorial-ping-pong.conf.in tutorial-ping-pong.conf)
configure_file(tutorial-ping-pong-surrogate.conf.in tutorial-ping-pong-surrogate.conf)
configure_file(kb.dfdally-72-zeromq-director.conf.in kb.dfdally-72-zeromq-director.conf)
configure_file(kb.dfdally-72-event-time-director.conf.in kb.dfdally-72-event-time-director.conf)
configure_file(kb.dfdally-72-milc-small.workload.conf.in kb.dfdally-72-milc-small.workload.conf)
configure_file(kb.dfdally-72-milc-small.json kb.dfdally-72-milc-small.json COPYONLY)
configure_file(kb.dfdally-72-milc-small.alloc.conf kb.dfdally-72-milc-small.alloc.conf COPYONLY)
configure_file(kb.dfdally-72-zeromq-director.conf.in kb.dfdally-72-zeromq-director.conf)
